# CUTI

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeLists_test.txt  LICENSE  README.md  appveyor.yml  azure-pipelines.yml
cmake/: Cuti.cmake  FindCUTI.cmake  FindCppUnit.cmake  FindVisualStudio.cmake  findCUTI.cmake  findCppUnit.cmake  findVisualStudio.cmake
cppunit/: CMakeLists.txt
cppunit/src/DllPlugInTester/: DllPlugInTester.vcxproj
cppunit/src/cppunit/: cppunit.vcxproj  cppunit_dll.vcxproj
cppunit/src/msvc6/testpluginrunner/: TestPlugInRunner.vcxproj
include/: Cuti.h  CutiFreeStanding.h  CutiVisualStudio.h  CutiXCode.h
src/: Cuti.mm  CutiMain.cpp  UnitTestPlugin.cpp
test/: TemplateFreeStanding.cpp  TestFreeStanding.cpp  TestTemplate.cpp
test/testDynamicLib/: CMakeLists.txt
test/testDynamicLib/cmake/: findCUTI.cmake  findCppUnit.cmake
test/testDynamicLib/include/: ComputeDouble.h  ComputeFloat.h  ComputeInt.h  DynamicLib.h
test/testDynamicLib/src/: ComputeDouble.cpp  ComputeFloat.cpp  ComputeInt.cpp
test/testDynamicLib/test/: TestLibDouble.cpp  TestLibFloat.cpp  TestLibInt.cpp  TestLibPlugIn.cpp
test/testDynamicLib/testCppunitFrontEnd/: TestLibDouble.cpp  TestLibFloat.cpp  TestLibInt.cpp
test/testDynamicLib/testCutiFrontEnd/: TestCuti.cpp  TestLibDouble.cpp  TestLibFloat.cpp  TestLibInt.cpp
test/testFreeStanding/: CMakeLists.txt
test/testFreeStanding/include/: ComputeDouble.h  ComputeFloat.h  ComputeInt.h  DynamicLib.h
test/testFreeStanding/src/: ComputeDouble.cpp  ComputeFloat.cpp  ComputeInt.cpp
test/testFreeStanding/test/: TestLibFloat.cpp  TestLibInt.cpp
test/testStaticLib/: CMakeLists.txt
test/testStaticLib/include/: ComputeDouble.h  ComputeFloat.h  ComputeInt.h
test/testStaticLib/src/: ComputeDouble.cpp  ComputeInt.cpp
test/testStaticLib/test/: TestLibDouble.cpp  TestLibFloat.cpp  TestLibInt.cpp
